--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -41,40 +41,23 @@ https://www.tooplate.com/view/2127-little-fashion
         </section>
     
         <main>
-
-            <nav class="navbar navbar-expand-lg">
-                <div class="container">
-                    
-                    <a class="navbar-brand" href="#">
-                        <strong>SIgn-Up</strong>
-                    </a>
-
-                    
-                </div>
-            </nav>
-
-    <div class="mt-3">
+            <div class="">
+            <div class="container d-flex justify-content-center col-lg-8 col-12 mx-auto pt-5">
+                <a href="#" class="btn btn-outline-dark w-25 active mx-3">User</a>
+                <a href="{% url 'farmer-signup' %}" class="btn btn-outline-dark w-25 mx-3">Farmer</a>
+            </div>
         <main>
 
-            <section class="sign-in-form section-padding">
+            <div class=" row">
+            </div>
+            <section class="sign-in-form">
                 <div class="container">
                     <div class="row">
 
                         <div class="col-lg-8 mx-auto col-12">
 
                             <h1 class="hero-title text-center mb-5">Sign Up</h1>
-                            {% if messages %}
-                            <div class="container mt-3">
-                              {% for message in messages %}
-                                <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
-                                  {{ message }}
-                                  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                                </div>
-                              {% endfor %}
-                            </div>
-                          {% endif %}
-
-                          
+                            {% include 'components/message.html' %}
 
                             <div class="row">
                                 <div class="col-lg-8 col-11 mx-auto">
@@ -110,11 +93,11 @@ https://www.tooplate.com/view/2127-little-fashion
                                             Create account
                                         </button>
 
-                                        <p class="text-center">Already have an account? Please <a class="text-decoration-underline" href="{% url 'login' %}">Sign In</a></p>
+                                        <p class="text-center">Already have an account? Please<br /> <a class="text-decoration-underline" href="{% url 'login' %}">Sign In</a></p>
 
                                         <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
 
-                                        <div class="social-login d-flex flex-column w-50 m-auto">
+                                        <div class="social-login d-flex flex-column w-50 m-auto pb-5">
                                 
                                             <a href="#" class="btn custom-btn social-btn mb-4">
                                                 <i class="bi bi-google me-3"></i>
