--- a/templates/farmers_page/farmer-signup.html
+++ b/templates/farmers_page/farmer-signup.html
@@ -175,7 +175,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                     <p class="text-center">
                       Already have an account? Please<br />
-                      <a href="{% url 'login' %}">Sign In</a>
+                      <a href="{% url 'farmer-login' %}">Sign In</a>
                     </p>
                     <div class="div-separator w-50 m-auto my-5">
                       <span>or</span>
