--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -5,7 +5,7 @@
 
 <section class="slick-slideshow">   
     <div class="slick-custom">
-                    <img src="{% static 'images/slideshow/medium-shot-business-women-high-five.jpeg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'images/slideshow/sl1.jpeg' %}" class="img-fluid" alt="">
 
                     <div class="slick-bottom">
                         <div class="container">
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="slick-custom">
-                    <img src="{% static 'images/slideshow/team-meeting-renewable-energy-project.jpeg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'images/slideshow/sl2.jpeg' %}" class="img-fluid" alt="">
                     
                     <div class="slick-bottom">
                         <div class="container">
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="slick-custom">
-                    <img src="{% static 'images/slideshow/two-business-partners-working-together-office-computer.jpeg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'images/slideshow/sl3.jpeg' %}" class="img-fluid" alt="">
                     
                     <div class="slick-bottom">
                         <div class="container">
@@ -90,19 +90,21 @@
                                     
                                     <div class="row">
                                         <div class="col-lg-7 col-12">
-                                            <img src="{% static 'images/pim-chu-z6NZ76_UTDI-unsplash.jpeg' %}" class="img-fluid" alt="">
+                                            <img src="{% static 'images/img2.jpeg' %}" class="img-fluid w-100" alt="">
                                         </div>
 
                                         <div class="col-lg-5 col-12">
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
-                                                <h4 class="mb-3">Good <span>Design</span> <br>Ideas for <span>your</span> fashion</h4>
+                                                <h4 class="mb-3">Introduction on<br><span>KBT</span>-Marketplace
                                                 
-                                                <p>Little Fashion templates comes with <a href="sign-in.html">sign in</a> / <a href="sign-up.html">sign up</a> pages, product listing / product detail, about, FAQs, and contact page.</p>
+                                                <p>Welcome to KBT-Marketplace, your trusted online platform for agricultural trade in Kumbotso LGA, Kano State. We connect farmers, wholesalers, and buyers, providing a seamless digital marketplace for agricultural products and services. </p>
                                                 
-                                                <p>Since this HTML template is based on Boostrap 5 CSS library, you can feel free to add more components as you need.</p>
+                                                <p>
+                                                    Our goal is to revolutionize the way agricultural goods are bought and sold, ensuring fair pricing, efficiency, and accessibility for all stakeholders.
+                                                </p>
                                                 
                                                 <div class="mt-2 mt-lg-auto">
-                                                    <a href="about.html" class="custom-link mb-2">
+                                                    <a href="{% url 'about' %}" class="custom-link mb-2">
                                                         Learn more about us
                                                         <i class="bi-arrow-right ms-2"></i>
                                                     </a>
@@ -125,9 +127,13 @@
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
                                                 <h4 class="mb-3">Life at Studio</h4>
                                                 
-                                                <p>Over three years in business, We’ve had the chance to work on a variety of projects, with companies</p>
+                                                <p>KBT-Marketplace is a digital platform designed to facilitate the buying and selling of agricultural products in Kumbotso LGA, Kano State. The platform operates by connecting three key actors: users, farmers, and administrators, each playing a vital role in ensuring smooth transactions and marketplace efficiency.
+
+                                                    
+                                                    
+                                                    </p>
                                                 
-                                                <p>Custom work is branding, web design, UI/UX design</p>
+                                                <p>The journey begins with user registration and authentication. Anyone interested in purchasing agricultural products can sign up as a user, while farmers who wish to sell must also create an account. However, to maintain quality and credibility, farmers are required to provide verification details, which the admin reviews before granting full access to seller privileges. This verification process ensures that only genuine farmers can list products on the marketplace.</p>
                                                 
                                                 <div class="mt-2 mt-lg-auto">
                                                     <a href="contact.html" class="custom-link mb-2">
@@ -143,7 +149,7 @@
                                 <div class="tab-pane fade" id="pills-skill" role="tabpanel" aria-labelledby="pills-skill-tab">
                                     <div class="row">
                                         <div class="col-lg-7 col-12">
-                                            <img src="{% static 'images/cody-lannom-G95AReIh_Ko-unsplash.jpeg' %}" class="img-fluid" alt="">
+                                            <img src="{% static 'images/cody-lannom-G95AReIh_Ko-unsplash.jpg' %}" class="img-fluid" alt="">
                                         </div>
                                         
                                         <div class="col-lg-5 col-12">
@@ -197,7 +203,7 @@
                     <div class="row align-items-center">
 
                         <div class="col-lg-6 col-12">
-                            <img src="{% static 'images/retail-shop-owner-mask-social-distancing-shopping.jpg' %}" class="img-fluid" alt="">
+                            <img src="{% static 'images/img1.jpg' %}" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-6 col-12">
