--- a/templates/base.html
+++ b/templates/base.html
@@ -73,15 +73,15 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
+                <a class="nav-link active" href="#">Home</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Story</a>
+                <a class="nav-link" href="{% url 'about' %}">Story</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="{% url 'products' %}">Products</a>
               </li>
 
               <li class="nav-item">
