--- a/templates/accounts/password_change_form.html
+++ b/templates/accounts/password_change_form.html
@@ -50,52 +50,29 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-8 mx-auto col-12">
+                        <h1 class="hero-title text-center mb-5">Change Password</h1>
+                        <div class="col-lg-8 mx-auto col-12 bg-body shadow p-5">
 
-                            <h1 class="hero-title text-center mb-5">Sign In</h1>
                             {% include 'components/message.html' %}
 
-                            <div class="row">
-                                <div class="col-lg-8 col-11 mx-auto">
+                            <div class="row ">
+                                <div class="col-lg-10 col-11 mx-auto">
                                     <form role="form" method="post">
                                         {% csrf_token %}
-
+                                        {% for field in form %}
                                         <div class="form-floating mb-4 p-0">
-                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
-
-                                            <label for="email">Email address</label>
-                                        </div>
-
-                                        <div class="form-floating p-0">
-                                            <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
-
-                                            <label for="password">Password</label>
-                                        </div>
-
+                                        <p>
+                                            <label class="text-dark" for="{{field.id_for_label}}"><b>{{field.label}}:</b></label>
+                                            {{field}}
+                                        </p>
+                                    </div>
+                                        {% endfor %}
+                                               
                                         <button type="submit" class="btn custom-btn form-control mt-4 mb-3">
-                                            Sign in
+                                            Change Password
                                         </button>
 
-                                        <p class="text-center">Don’t have an account? <br /><a class="text-decoration-underline" href="{% url 'signup' %}">Create One</a> or  <a href="{% url 'password_reset' %}">Reset password</a></p>
-
-                                        <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
-
-                                        <div class="social-login d-flex flex-column w-50 m-auto">
-                                
-                                            <a href="#" class="btn custom-btn social-btn mb-4">
-                                                <i class="bi bi-google me-3"></i>
-            
-                                                Continue with Google
-                                            </a>
-            
-                                            <a href="#" class="btn custom-btn social-btn">
-                                                <i class="bi bi-facebook me-3"></i>
-            
-                                                Continue with Facebook
-                                            </a>
-                                        </div>
-
-
+                                        
                                     </form>
                                 </div>
                             </div>
