--- a/templates/products/about.html
+++ b/templates/products/about.html
@@ -43,11 +43,11 @@ https://www.tooplate.com/view/2127-little-fashion
   </head>
 
   <body>
-    <section class="featured-product section-padding">
-      <div class="container">
+    <section>
+      <div>
         <div class="row">
-          <div class="col-12 text-center">
-            <h2 class="mb-5">About Us</h2>
+          <div class="w-100 h-75 p-5 bg-dark col-12 text-center ">
+            <h2 class="mb-5 text-light">About Us</h2>
           </div>
 
           <div class="container col-lg-8 col-12 shadow-sm mx-auto p-5 m-5">
