--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -59,7 +59,43 @@
                 </div>
 
             </section>
-
+{% if request.user.is_authenticated %}
+<section class="featured-product section-padding">
+    <div class="container">
+        <div class="row">
+            
+            <div class="col-12text-center">
+                <h2 class="mb-5">Featured Products</h2>
+            </div>
+            {% for c in crop %}
+            
+            <div class="col-lg-4 col-12 mb-3">
+                <div class="product-thumb">
+                    <a href="#">
+                        <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
+                    </a>
+                    
+                    <div class="product-top d-flex">
+                        <span class="product-alert me-auto">New Arrival</span>
+                        
+                        <a href="#" class="bi-heart-fill product-icon"></a>
+                    </div>
+                    
+                    <div class="product-info d-flex">
+                        <div>
+                            <h5 class="product-title mb-0">
+                                <a href="{% url 'product-detail' c.id %}" class="product-title-link">{{c.crop_name}}</a>
+                            </h5>
+                            
+                            <p class="product-p">{{c.crop_desc}}</p>
+                        </div>
+                        
+                        <small class="product-price text-muted ms-auto mt-auto mb-5">${{c.crop_price}}</small>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+            {% else %}
             <section class="about section-padding">
                 <div class="container">
                     <div class="row">
@@ -223,14 +259,15 @@
                     </div>
                 </div>
             </section>
-            
+
             <section class="featured-product section-padding">
                 <div class="container">
                     <div class="row">
                         
-                        <div class="col-12 text-center">
+                        <div class="col-12text-center">
                             <h2 class="mb-5">Featured Products</h2>
                         </div>
+                        {% for c in crop %}
                         
                         <div class="col-lg-4 col-12 mb-3">
                             <div class="product-thumb">
@@ -247,69 +284,22 @@
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Tree pot</a>
+                                            <a href="product-detail.html" class="product-title-link">{{c.crop_name}}</a>
                                         </h5>
                                         
-                                        <p class="product-p">Original package design from house</p>
+                                        <p class="product-p">{{c.crop_desc}}</p>
                                     </div>
                                     
-                                    <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
+                                    <small class="product-price text-muted ms-auto mt-auto mb-5">${{c.crop_price}}</small>
                                 </div>
                             </div>
                         </div>
+                        {% endfor %}
                         
-                        <div class="col-lg-4 col-12 mb-3">
-                            <div class="product-thumb">
-                                <a href="product-detail.html">
-                                    <img src="{% static 'images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
-                                </a>
-                                
-                                <div class="product-top d-flex">
-                                    <span class="product-alert">Low Price</span>
-                                    
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                                </div>
-
-                                <div class="product-info d-flex">
-                                    <div>
-                                        <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Fashion Set</a>
-                                        </h5>
-                                        
-                                        <p class="product-p">Costume Package</p>
-                                    </div>
-                                    
-                                    <small class="product-price text-muted ms-auto mt-auto mb-5">$35</small>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-lg-4 col-12">
-                            <div class="product-thumb">
-                                <a href="product-detail.html">
-                                    <img src="{% static 'images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
-                                </a>
-                                
-                                <div class="product-top d-flex">
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                                </div>
-                                
-                                <div class="product-info d-flex">
-                                    <div>
-                                        <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Juice Drinks</a>
-                                        </h5>
-                                        
-                                        <p class="product-p">Nature made another world</p>
-                                    </div>
-
-                                    <small class="product-price text-muted ms-auto mt-auto mb-5">$45</small>
-                                </div>
-                            </div>
-                        </div>
-
+                       
+{% endif %}
                         <div class="col-12 text-center">
-                            <a href="products.html" class="view-all">View All Products</a>
+                            <a href="{% url 'products' %}" class="view-all">View All Products</a>
                         </div>
                         
                     </div>
