--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -1,140 +1,190 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    {% load static %}
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% load static %}
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <meta name="description" content="">
-        <meta name="author" content="">
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
-        <title>SIgn-Up</title>
+    <title>SIgn-Up</title>
 
-        <!-- CSS FILES -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- CSS FILES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet" />
 
-        <link rel="stylesheet" href="{% static 'css/slick.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}" />
 
-        <link href="{% static 'css/tooplate-little-fashion.css' %}" rel="stylesheet"> 
-<!--
+    <link
+      href="{% static 'css/tooplate-little-fashion.css' %}"
+      rel="stylesheet"
+    />
+    <!--
 
 Tooplate 2127 Little Fashion
 
 https://www.tooplate.com/view/2127-little-fashion
 
 -->
-    </head>
-    
-    <body>
+  </head>
 
-        <section class="preloader">
-            <div class="spinner">
-                <span class="sk-inner-circle"></span>
-            </div>
-        </section>
-    
+  <body>
+    <section class="preloader">
+      <div class="spinner">
+        <span class="sk-inner-circle"></span>
+      </div>
+    </section>
+
+    <main>
+      <div class="">
         <main>
-            <div class="">
-            <div class="container d-flex justify-content-center col-lg-8 col-12 mx-auto pt-5">
-                <a href="#" class="btn btn-outline-dark w-25 active mx-3">User</a>
-                <a href="{% url 'farmer-signup' %}" class="btn btn-outline-dark w-25 mx-3">Farmer</a>
-            </div>
-        <main>
+          <div class="row"></div>
+          <section class="sign-in-form">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-8 mx-auto col-12">
+                  <h1 class="hero-title text-center mb-5">Sign Up</h1>
+                  {% include 'components/message.html' %}
 
-            <div class=" row">
-            </div>
-            <section class="sign-in-form">
-                <div class="container">
-                    <div class="row">
+                  <div class="row">
+                    <div class="col-lg-8 col-11 mx-auto">
+                      <form role="form" method="post">
+                        {% csrf_token %}
 
-                        <div class="col-lg-8 mx-auto col-12">
+                        <div class="form-floating mb-4">
+                          <input
+                            type="text"
+                            name="fname"
+                            id="fname"
+                            class="form-control"
+                            placeholder="Full Name"
+                            required
+                          />
 
-                            <h1 class="hero-title text-center mb-5">Sign Up</h1>
-                            {% include 'components/message.html' %}
+                          <label for="email">Full Name</label>
+                        </div>
+                        <div class="form-floating">
+                          <input
+                            type="email"
+                            name="email"
+                            id="email"
+                            pattern="[^ @]*@[^ @]*"
+                            class="form-control"
+                            placeholder="Email address"
+                            required
+                          />
 
-                            <div class="row">
-                                <div class="col-lg-8 col-11 mx-auto">
-                                    <form role="form" method="post">
-                                        {% csrf_token %}
-
-                                        <div class="form-floating mb-4">
-                                            <input type="text" name="fname" id="fname" class="form-control" placeholder="Full Name" required>
-
-                                            <label for="email">Full Name</label>
-                                        </div>
-                                        <div class="form-floating">
-                                            <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
-
-                                            <label for="email">Email address</label>
-                                        </div>
-
-                                        <div class="form-floating my-4">
-                                            <input type="password" name="password" id="password" class="form-control"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Password" title="Must contain at least one number, one uppercase letter, one lowercase letter, and at least 8 characters" required>
-
-                                            <label for="password">Password</label>
-                                            
-                                
-                                        </div>
-
-                                        <div class="form-floating">
-                                            <input type="password" name="confirm_password" id="confirm_password"  class="form-control" placeholder="Password"   required>
-
-                                            <label for="confirm_password">Password Confirmation</label>
-                                        </div>
-
-                                        <button type="submit" class="btn custom-btn form-control mt-4 mb-3">
-                                            Create account
-                                        </button>
-
-                                        <p class="text-center">Already have an account? Please<br /> <a class="text-decoration-underline" href="{% url 'login' %}">Sign In</a></p>
-
-                                        <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
-
-                                        <div class="social-login d-flex flex-column w-50 m-auto pb-5">
-                                
-                                            <a href="#" class="btn custom-btn social-btn mb-4">
-                                                <i class="bi bi-google me-3"></i>
-            
-                                                Google
-                                            </a>
-            
-                                            <a href="#" class="btn custom-btn social-btn">
-                                                <i class="bi bi-facebook me-3"></i>
-            
-                                                Facebook
-                                            </a>
-                                        </div>
-
-                                    </form>
-                                </div>
-                            </div>
-                            
+                          <label for="email">Email address</label>
                         </div>
 
+                        <div class="form-floating my-4">
+                          <input
+                            type="password"
+                            name="password"
+                            id="password"
+                            class="form-control"
+                            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                            placeholder="Password"
+                            title="Must contain at least one number, one uppercase letter, one lowercase letter, and at least 8 characters"
+                            required
+                          />
+
+                          <label for="password">Password</label>
+                        </div>
+
+                        <div class="form-floating">
+                          <input
+                            type="password"
+                            name="confirm_password"
+                            id="confirm_password"
+                            class="form-control"
+                            placeholder="Password"
+                            required
+                          />
+
+                          <label for="confirm_password"
+                            >Password Confirmation</label
+                          >
+                        </div>
+                        <br />
+                        <label class="form-label" for="role"
+                          ><b>ROLE:</b></label
+                        >
+                        <select
+                          name="role"
+                          id="role"
+                          class="form-control"
+                          required
+                        >
+                          <option value="user">User</option>
+                          <option value="farmer">Farmer</option>
+                        </select>
+
+                        <button
+                          type="submit"
+                          class="btn custom-btn form-control mt-4 mb-3"
+                        >
+                          Create account
+                        </button>
+
+                        <p class="text-center">
+                          Already have an account? Please<br />
+                          <a
+                            class="text-decoration-underline"
+                            href="{% url 'login' %}"
+                            >Sign In</a
+                          >
+                        </p>
+
+                        <div class="div-separator w-50 m-auto my-5">
+                          <span>or</span>
+                        </div>
+
+                        <div
+                          class="social-login d-flex flex-column w-50 m-auto pb-5"
+                        >
+                          <a href="#" class="btn custom-btn social-btn mb-4">
+                            <i class="bi bi-google me-3"></i>
+
+                            Google
+                          </a>
+
+                          <a href="#" class="btn custom-btn social-btn">
+                            <i class="bi bi-facebook me-3"></i>
+
+                            Facebook
+                          </a>
+                        </div>
+                      </form>
                     </div>
+                  </div>
                 </div>
-            </section>
-
+              </div>
+            </div>
+          </section>
         </main>
+      </div>
 
-     </div>
-
-
-<!-- JAVASCRIPT FILES -->
-<script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'js/Headroom.js' %}"></script>
-<script src="{% static 'js/jQuery.headroom.js' %}"></script>
-<script src="{% static 'js/slick.min.js' %}"></script>
-{% comment %} <script src="{% static 'js/scripts.js' %}"></script> {% endcomment %}
-<script src="{% static 'js/custom.js' %}"></script>
-
-</body>
+      <!-- JAVASCRIPT FILES -->
+      <script src="{% static 'js/jquery.min.js' %}"></script>
+      <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static 'js/Headroom.js' %}"></script>
+      <script src="{% static 'js/jQuery.headroom.js' %}"></script>
+      <script src="{% static 'js/slick.min.js' %}"></script>
+      {% comment %}
+      <script src="{% static 'js/scripts.js' %}"></script>
+      {% endcomment %}
+      <script src="{% static 'js/custom.js' %}"></script>
+    </main>
+  </body>
 </html>
