--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="{% static 'css/slick.css' %}" />
 
     <link href="{% static 'css/tooplate-little-fashion.css' %}" rel="stylesheet" />
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <!--
 
 Tooplate 2127 Little Fashion
@@ -43,76 +46,72 @@ https://www.tooplate.com/view/2127-little-fashion
     </section>
 
     <main>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        
+  <div class="container-fluid">
+    <a class="navbar-brand me-5"  href="#"><span style="color: #FF4400;" >KBT</span>-Marketplace</a>
+    <div class="d-flex d-lg-none">
+      <div class="d-flex me-4 mt-2">
+        <a href="{% url 'account' %}" class="col-lg-4 me-2">
+          <i class="fa-regular fa-user"></i>
+        </a>
+        <a href="#" class="col-lg-4 position-relative">
+          <i class="fa-solid fa-cart-shopping">
+  
+          <span class="position-absolute top-0 start-100 translate-middle ms-2 mb-3 badge rounded-circle text-light bg-danger">
+            5
+          </span>
+        </i>
+      </a>
+    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </div>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="{% url 'about' %}">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="#">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " aria-current="page" href="#">Contact</a>
+        </li>
+      </ul>
+      <div class="d-flex row d-lg-flex d-none">
+        <a href="{% url 'account' %}" class="col-lg-4">
+          <i class="fa-regular fa-user"></i>
+        </a>
+        <a href="#" class="col-lg-4 position-relative">
+          <i class="fa-solid fa-cart-shopping">
 
-          <a class="navbar-brand" href="index.html">
-            <strong><span>KBT</span>-Marketplace</strong>
-          </a>
+            <span class="position-absolute top-0 start-100 translate-middle ms-2 mb-3 badge rounded-circle text-light bg-danger">
+              5
+            </span>
+          </i>
+        </a>
+      </div>
+      
+      <form class="d-flex ms-3" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+    
+  </div>
+</nav>
 
-          <div class="d-lg-none">
-            <!-- <a href="Farmers Pages/farmer-signup.html" class="bi-person custom-icon me-3"></a>
-                        <a href="product-detail.html" class="bi-bag custom-icon"></a> -->
-
-            <a href="{% url 'signup' %}" class="btn btn-dark"
-              >Sign-Up</a
-            >
-          </div>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'about' %}">Story</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'products' %}">Products</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="faq.html">FAQs</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-
-            <div class="d-none d-lg-block">
-              <!-- <a href="Farmers Pages/farmer-signup.html" class="bi-person custom-icon me-3"></a>
-                        <a href="product-detail.html" class="bi-bag custom-icon"></a> -->
-              <a href="{% url 'signup' %}" class="btn btn-dark"
-                >Sign-Up</a
-              >
-            </div>
-          </div>
-        </div>
-      </nav>
-
-            {% block content %}
+{% block content %}
             
             {% endblock content %}
 
-
-
-
-
-    <footer class="site-footer">
+        
+            <footer class="site-footer">
         <div class="container">
             <div class="row">
 
