--- a/templates/components/message.html
+++ b/templates/components/message.html
@@ -1,11 +1,10 @@
-                
-                {% if messages %}
-                  <div class="container w-75 mt-3">
+                  {% if messages %}
+                  <div class="container col-lg-8 col-12 mx-auto mt-3">
                     {% for message in messages %}
-                      <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
+                    <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
                         {{ message }}
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                       </div>
-                    {% endfor %}
+                      {% endfor %}
                   </div>
                 {% endif %}
