--- a/templates/farmers_page/add-crops.html
+++ b/templates/farmers_page/add-crops.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,25 +8,31 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Add Crop</title>
+    <title>Farmer-Profile</title>
 
     <!-- CSS FILES -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="{% static 'https://fonts.googleapis.com '%}" />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap"
+      rel="preconnect"
+      href="{% static 'https://fonts.gstatic.com '%}"
+      crossorigin
+    />
+
+    <link
+      href="{% static 'https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap '%}"
       rel="stylesheet"
     />
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/bootstrap-icons.css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap.min.css '%}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap-icons.css '%}" rel="stylesheet" />
 
-    <link rel="../stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="{% static 'css/slick.css '%}" />
 
-    <link href="../css/tooplate-little-fashion.css" rel="stylesheet" />
-
+    <link
+      href="{% static 'css/tooplate-little-fashion.css '%}"
+      rel="stylesheet"
+    />
     <!--
 
 Tooplate 2127 Little Fashion
@@ -52,6 +59,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="row">
                 <div class="col-lg-8 col-11 mx-auto">
                   <form role="form" method="post">
+                    {% csrf_token %}
                     <div class="form-floating">
                         <input
                           type="text"
@@ -68,23 +76,23 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="form-floating">
                       <input
                         type="text"
-                        name="title"
+                        name="cprice"
                         id="title"
                         class="form-control"
-                        placeholder="Crop Title"
+                        placeholder="Crop Price"
                         required
                       />
 
-                      <label for="fname">Crop Title</label>
+                      <label for="fname">Crop Price</label>
                     </div>
                     <br />
                     <div class="form-floating">
                       <input
                         type="text"
-                        name="desc"
+                        name="cdesc"
                         id="desc"
                         class="form-control"
-                        placeholder="Description"
+                        placeholder="Crop Description"
                         required
                       />
 
@@ -96,7 +104,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     <div class="form-floating">
                       <input
                         type="file"
-                        name="file"
+                        name="cimg"
                         id="file"
                         class="form-control"
                         placeholder="Crop Image"
@@ -185,11 +193,12 @@ https://www.tooplate.com/view/2127-little-fashion
     </footer>
 
     <!-- JAVASCRIPT FILES -->
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/Headroom.js"></script>
-    <script src="../js/jQuery.headroom.js"></script>
-    <script src="../js/slick.min.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+      <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static 'js/Headroom.js' %}"></script>
+      <script src="{% static 'js/jQuery.headroom.js' %}"></script>
+      <script src="{% static 'js/slick.min.js' %}"></script>
+      <script src="{% static 'js/custom.js' %}"></script>
+      <script src="{% static 'js/custom.js' %}"></script>
   </body>
 </html>
