--- a/templates/farmers_page/farmer-login.html
+++ b/templates/farmers_page/farmer-login.html
@@ -52,7 +52,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-8 mx-auto col-12">
 
-                            <h1 class="hero-title text-center mb-5">Farmer SignIn</h1>
+                            <h1 class="hero-title text-center mb-5">Farmer Sign In</h1>
                             {% include 'components/message.html' %}
 
                             <div class="row">
@@ -76,7 +76,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                             Sign in
                                         </button>
 
-                                        <p class="text-center">Don’t have an account? <br /><a class="text-decoration-underline" href="{% url 'farmer-signup' %}">Create One</a></p>
+                                        <p class="text-center">Don’t have an account? <br /><a class="text-decoration-underline" href="{% url 'signup' %}">Create One</a> or  <a href="{% url 'password_reset' %}">Reset password</a></p>
 
                                         <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
 
