--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -57,90 +57,35 @@ https://www.tooplate.com/view/2127-little-fashion
                 </div>
             </header>
 
-            <section class="products section-padding">
-                <div class="container">
-                    <div class="row">
+            <section class="container products section-padding">
+                {% for c in crop %}
+            
+            <div class="col-lg-4 col-12 mb-3">
+                <div class="product-thumb">
+                    <a href="product-detail.html">
+                        <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
+                    </a>
+                    
+                    <div class="product-top d-flex">
+                        <span class="product-alert me-auto">New Arrival</span>
                         
-                        <div class="col-12">
-                            <h2 class="mb-5">New Arrivals</h2>
+                        <a href="#" class="bi-heart-fill product-icon"></a>
+                    </div>
+                    
+                    <div class="product-info d-flex">
+                        <div>
+                            <h5 class="product-title mb-0">
+                                <a href="product-detail.html" class="product-title-link">{{c.crop_name}}</a>
+                            </h5>
+                            
+                            <p class="product-p">{{c.crop_desc}}</p>
                         </div>
-
-                        <div class="col-lg-4 col-12 mb-3">
-                            <div class="product-thumb">
-                                <a href="product-detail.html">
-                                    <img src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg" class="img-fluid product-image" alt="">
-                                </a>
-
-                                <div class="product-top d-flex">
-                                    <span class="product-alert me-auto">New Arrival</span>
-
-                                    <a href="#" class="bi-heart-fill product-icon"></a>
-                                </div>
-
-                                <div class="product-info d-flex">
-                                    <div>
-                                        <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Tree pot</a>
-                                        </h5>
-
-                                        <p class="product-p">Original package design from house</p>
-                                    </div>
-
-                                    <small class="product-price text-muted ms-auto">$25</small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-12 mb-3">
-                            <div class="product-thumb">
-                                <a href="product-detail.html">
-                                    <img src="images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg" class="img-fluid product-image" alt="">
-                                </a>
-
-                                <div class="product-top d-flex">
-                                    <span class="product-alert">Discounted Price</span>
-
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                                </div>
-
-                                <div class="product-info d-flex">
-                                    <div>
-                                        <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Fashion set</a>
-                                        </h5>
-
-                                        <p class="product-p">Costume package</p>
-                                    </div>
-
-                                    <small class="product-price text-muted ms-auto">$35</small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-12">
-                            <div class="product-thumb">
-                                <a href="product-detail.html">
-                                    <img src="images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg" class="img-fluid product-image" alt="">
-                                </a>
-
-                                <div class="product-top d-flex">
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                                </div>
-
-                                <div class="product-info d-flex">
-                                    <div>
-                                        <h5 class="product-title mb-0">
-                                            <a href="product-detail.html" class="product-title-link">Juice Drinks</a>
-                                        </h5>
-
-                                        <p class="product-p">Nature made another world</p>
-                                    </div>
-
-                                    <small class="product-price text-muted ms-auto">$45</small>
-                                </div>
-                            </div>
-                        </div>
-
+                        
+                        <small class="product-price text-muted ms-auto mt-auto mb-5">${{c.crop_price}}</small>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
                         <div class="col-12">
                             <h2 class="mb-5">Popular</h2>
                         </div>
